--- a/k8s/network-policy-nodeapp.yml
+++ b/k8s/network-policy-nodeapp.yml
@@ -6,14 +6,25 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app: nodeapp
+      app: nodeapp  
   policyTypes:
   - Ingress
+  - Egress
+
   ingress:
   - from:
     - podSelector:
         matchLabels:
           app: nodeapp 
+    - namespaceSelector: {}  
     ports:
     - protocol: TCP
-      port: 3000
+      port: 3000  
+
+  egress:
+  - to:
+    - ipBlock:
+        cidr: 10.0.0.0/16
+    ports:
+    - protocol: TCP
+      port: 27017  
